# advent-of-code-2023-ocaml

./: LICENSE  Makefile  README.md  aoc.opam  dune  dune-project
day_01/: dune  solution_01.ml
day_02/: dune  solution_02.ml
day_03/: dune  p2.expected  solution_03.ml
day_04/: dune  solution_04.ml
day_05/: dune
day_06/: dune  p1.expected  p2.expected  solution_06.ml
day_07/: dune
day_08/: dune
day_09/: dune
day_10/: dune
day_11/: dune  solution_11.ml
day_12/: dune
day_13/: dune
day_14/: dune
day_15/: dune
day_16/: dune
day_17/: dune
day_18/: dune
day_19/: dune
day_20/: dune
day_21/: dune
day_22/: dune
day_23/: dune
day_24/: dune
day_25/: dune
lib/: run.mli  test.ml
